tests/negative/import-export1-a.toit
// Copyright (C) 2018 Toitware ApS.
// Use of this source code is governed by a Zero-Clause BSD license that can
// be found in the tests/LICENSE file.

import .import-export1-b as foo
import .import-export1-b

export *
